--- a/views/nav_bar.jade
+++ b/views/nav_bar.jade
@@ -10,3 +10,7 @@ nav#app-menu
 					a(href='/alumnos')
 						i.fi-trophy
 						span.show-for-large Alumnos
+				li#conferencias-app-tab
+					a(href='/conferencias')
+						i.fi-trophy
+						span.show-for-large Conferencias
