--- a/views/nav_bar.jade
+++ b/views/nav_bar.jade
@@ -14,3 +14,7 @@ nav#app-menu
 					a(href='/conferencias')
 						i.fi-trophy
 						span.show-for-large Conferencias
+				li#conferencias-app-tab
+					a(href='/asistencias')
+						i.fi-trophy
+						span.show-for-large Asistencias
