--- a/views/asistencia.jade
+++ b/views/asistencia.jade
@@ -54,6 +54,8 @@ block extra_script
                                             }
                                         });
                                     }
+                                } else {
+                                    self.nombreAlumno("No se encontro a un Alumno con el Carnet");
                                 }
                                 
 
