--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Bienvenido a #{title}.
+  p Tito es una plataforma para registro de Asistencias a Conferencias por parte de Alumnos.  Fácil de utilizar, lo único que debes de hacer es click en cualquiera de las opciones que se encuentran en la parte de arriba :) !!!!!!
+  p
+    a.button.quickable(href='asistencia') 
+     i.fi-plus
+      |  Asistencia Rápida
